# finalWork

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
base/: base_class.py  base_page.py
components/: filter.py  navigation.py
pages/: cart_page.py  catalog_page.py  doors_and_windows_page.py  main_page.py  order_page.py
scripts/: generate_readme.py  readme_template.md
tests/: test_buy_door.py
utulities/: conftest.py
